[gd_scene load_steps=5 format=2]

[ext_resource path="res://WorldGen/Control.gd" type="Script" id=1]
[ext_resource path="res://WorldGen/BSP.gd" type="Script" id=2]
[ext_resource path="res://WorldGen/CellularAutomata.gd" type="Script" id=3]
[ext_resource path="res://WorldGen/AssingZoneToMap.gd" type="Script" id=4]

[node name="WorldGen" type="Node2D"]
script = ExtResource( 1 )

[node name="BSP" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="CellularAutomata" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="StructureBuild" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = -259.829
margin_top = 1.62901
margin_right = -2.82919
margin_bottom = 69.629

[node name="BSP" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 68.0
margin_bottom = 68.0

[node name="NewBSP" type="Button" parent="HBoxContainer/BSP"]
margin_right = 68.0
margin_bottom = 20.0
text = "New BSP"

[node name="Automata" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 72.0
margin_right = 145.0
margin_bottom = 68.0

[node name="NewCave" type="Button" parent="HBoxContainer/Automata"]
margin_right = 73.0
margin_bottom = 20.0
text = "New cave"

[node name="Smooth" type="Button" parent="HBoxContainer/Automata"]
margin_top = 24.0
margin_right = 73.0
margin_bottom = 44.0
text = "Smooth"

[node name="Draw" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 149.0
margin_right = 257.0
margin_bottom = 68.0

[node name="DrawAutomata" type="Button" parent="HBoxContainer/Draw"]
margin_right = 108.0
margin_bottom = 20.0
text = "Draw automata"

[node name="DrawZones" type="Button" parent="HBoxContainer/Draw"]
margin_top = 24.0
margin_right = 108.0
margin_bottom = 44.0
text = "Draw zones"

[node name="DrawDivisions" type="Button" parent="HBoxContainer/Draw"]
margin_top = 48.0
margin_right = 108.0
margin_bottom = 68.0
text = "Draw divisions"

[connection signal="pressed" from="HBoxContainer/BSP/NewBSP" to="." method="_on_NewBSP_pressed"]
[connection signal="pressed" from="HBoxContainer/Automata/NewCave" to="." method="_on_NewCave_pressed"]
[connection signal="pressed" from="HBoxContainer/Automata/Smooth" to="." method="_on_Smooth_pressed"]
[connection signal="pressed" from="HBoxContainer/Draw/DrawAutomata" to="." method="_on_DrawAutomata_pressed"]
[connection signal="pressed" from="HBoxContainer/Draw/DrawZones" to="." method="_on_DrawZones_pressed"]
[connection signal="pressed" from="HBoxContainer/Draw/DrawDivisions" to="." method="_on_DrawDivisions_pressed"]
